# Chess

./: .gitignore  CMakeLists.txt  main.cpp
Field/: Field.cpp  Field.h
Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
